# pulsare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pulsare.py  pyproject.toml  reloj.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
tests/: test_pulsare.py  test_reloj.py
