[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reloj"
version = "1.0.0"
description = "Task scheduling without infrastructure. One file. Zero deps."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raul", email = "msc.framework@gmail.com" },
]
keywords = ["scheduler", "cron", "task", "async", "threading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ElEscribanoSilente/reloj"
Repository = "https://github.com/ElEscribanoSilente/reloj"
Issues = "https://github.com/ElEscribanoSilente/reloj/issues"
Changelog = "https://github.com/ElEscribanoSilente/reloj/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["reloj.py"]
exclude = ["tests/", ".github/", ".gitignore", "CHANGELOG.md", "CONTRIBUTING.md", "pyproject.toml"]

[tool.hatch.build.targets.sdist]
include = ["reloj.py", "tests/", "LICENSE", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
